--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.8.9",
+    "@tanstack/react-query-devtools": "^5.8.9",
     "axios": "^1.6.2",
     "next": "14.0.3",
     "react": "^18",
