--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@rainbow-me/rainbowkit": "^1.3.0",
     "@tanstack/react-query": "^5.8.9",
     "@tanstack/react-query-devtools": "^5.8.9",
     "axios": "^1.6.2",
@@ -22,6 +23,8 @@
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "viem": "^1.19.9",
+    "wagmi": "^1.4.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
