--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "lodash.pick": "^4.4.0",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
+    "@types/lodash.pick": "^4.4.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
