--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/lodash.pick": "^4.4.9",
     "@types/node": "^20",
