--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["debita", "timelap", "viem", "wagmi"]
+  "cSpell.words": ["bignumber", "debita", "defi", "lucide", "timelap", "viem", "wagmi"]
 }
