--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-no-ssr": "^1.1.0",
+    "recharts": "^2.10.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.1",
     "viem": "^1.19.9",
     "wagmi": "^1.4.7",
     "zod": "^3.22.4"
