--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "lodash.pick": "^4.4.0",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
