--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
+    "pluralize": "^8.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-no-ssr": "^1.1.0",
