--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/eslint-plugin-query": "^5.8.4",
     "@types/lodash.pick": "^4.4.9",
     "@types/node": "^20",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
