Move to state machine based logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-  "cSpell.words": ["bignumber", "debita", "defi", "lucide", "pluralize", "recharts", "timelap", "viem", "wagmi"]
+  "cSpell.words": [
+    "bignumber",
+    "debita",
+    "defi",
+    "lucide",
+    "pluralize",
+    "recharts",
+    "timelap",
+    "viem",
+    "wagmi",
+    "xstate"
+  ]
 }
