--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rainbow-me/rainbowkit": "^1.3.0",
     "@tanstack/react-query": "^5.8.9",
     "@tanstack/react-query-devtools": "^5.8.9",
+    "@xstate/react": "^4.0.1",
     "axios": "^1.6.2",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
@@ -32,6 +33,7 @@
     "usehooks-ts": "^2.9.1",
     "viem": "^1.19.9",
     "wagmi": "^1.4.7",
+    "xstate": "^5.2.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
