--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "cooldown",
     "debita",
     "defi",
+    "fsonic",
     "lucide",
     "pluralize",
     "Popover",
@@ -16,6 +17,7 @@
     "usehooks",
     "viem",
     "wagmi",
+    "WIGO",
     "xstate"
   ]
 }
