Unable to access Equalizer API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,10 +8,12 @@
     "debita",
     "defi",
     "fsonic",
+    "inputnumber",
     "ltvcustom",
     "lucide",
     "pluralize",
     "Popover",
+    "primereact",
     "recharts",
     "statelyai",
     "timelap",
